unpackaged/main/default/objects/aeon2__Log__c/aeon2__Log__c.object-meta.xml
<CustomObject>
    <label>Work Log</label>
    <nameField>
        <displayFormat>L{00000000}</displayFormat>
        <label>Work Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>