unpackaged/main/default/objects/aeon2__Log__c/fields/aeon2__AdjustmentComment__c.field-meta.xml
<CustomField>
    <fullName>aeon2__AdjustmentComment__c</fullName>
    <label>Adjustment Comment</label>
    <type>TextArea</type>
</CustomField>