unpackaged/main/default/objects/aeon2__Log__c/fields/aeon2__AdjustmentReason__c.field-meta.xml
<CustomField>
    <fullName>aeon2__AdjustmentReason__c</fullName>
    <label>Adjustment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>aeon2__TimeAdjustmentReasons</valueSetName>
    </valueSet>
</CustomField>