unpackaged/main/default/objects/aeon2__Log__c/fields/aeon2__Case__c.field-meta.xml
<CustomField>
    <fullName>aeon2__Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>WorkLogs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>