unpackaged/main/default/objects/aeon2__Log__c/fields/aeon2__Day__c.field-meta.xml
<CustomField>
    <fullName>aeon2__Day__c</fullName>
    <label>Agent Work Day</label>
    <referenceTo>aeon2__Day__c</referenceTo>
    <relationshipName>Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>