unpackaged/main/default/objects/aeon2__Log__c/fields/aeon2__Total__c.field-meta.xml
<CustomField>
    <fullName>aeon2__Total__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Overall</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>