unpackaged/main/default/objects/aeon2__Log__c/fields/Case_Owner_Queue__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Queue__c</fullName>
    <formula>aeon2__Day__r.Owner:User.Personal_Queue_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Queue</label>
    <type>Text</type>
</CustomField>