unpackaged/main/default/objects/aeon2__Log__c/fields/Speed_To_Answer__c.field-meta.xml
<CustomField>
    <fullName>Speed_To_Answer__c</fullName>
    <formula>(CreatedDate - aeon2__Case__r.CreatedDate)*86400</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Speed To Answer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>