unpackaged/main/default/objects/aeon2__Log__c/listViews/aeon2__All.listView-meta.xml
<ListView>
    <fullName>aeon2__All</fullName>
    <columns>NAME</columns>
    <columns>aeon2__Day__c</columns>
    <columns>aeon2__Case__c</columns>
    <columns>aeon2__Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>